fixed product spacing

--- a/src/Product.css
+++ b/src/Product.css
@@ -1,14 +1,14 @@
 .product-card {
-    width: 200px;
-    height: 350px;
+    width: 150px;
+    height: 300px;
     padding: 40px 60px;
-    margin: 50px;
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
     /* border: 0.5px solid #1B9303; */
 }
 
